--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>jp.ac.hcs.s3a108</groupId>
-	<artifactId>webportal</artifactId>
+	<artifactId>webportal-FW</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>webportal</name>
+	<name>webportal-FW</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
@@ -93,6 +93,10 @@
 			<artifactId>jackson-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
